# Duck-Rating

./: .gitignore  README.md  install.sh  poetry.toml  pyproject.toml  run.py
scripts/: get_csv.py  other.py  scraper.py  standings.py
